# ai_agent_evaluator

./: .gitignore  README.md  TaskIdeas.md  llm_providers.json  main.py  pyproject.toml  run.sh
.github/workflows/: cargo-clippy.yml  cargo-fmt-check.yml  deploypages.yml
evaluator/: Cargo.toml  README.md  __main__.py  agent.py  config.py  datatypes.py  docker.py  mcp_manager.py  pyproject.toml  run.py  tool_manager.py
evaluator/agent-types/: Cargo.toml
evaluator/agent-types/src/: lib.rs  llm_types.rs
evaluator/provider/: openai_types.py
evaluator/scaffold/: Cargo.toml
evaluator/scaffold/src/: html_screenshot.rs  main.rs  run_test_case.rs  zip_folder.rs
evaluator/simple-agent/: Cargo.toml
evaluator/simple-agent/src/: agent.rs  default_tools.rs  llm_api_client.rs  llm_client.rs  main.rs  tool_manager.rs
inputs/demo_site_for_3d_printer/: config.json
inputs/demo_site_for_plumbing/: config.json
inputs/game_3d_cart_racing/: config.json
inputs/game_tic_tac_toe/: config.json
inputs/hello_world_html/: config.json
inputs/image_of_mountains/: config.json
inputs/intilize_react/: config.json
inputs/rotating_hexagon/: config.json
inputs/rotating_hexagon_better_prompt/: config.json
inputs/rotating_hexagon_self_aware_prompt/: config.json
inputs/use_bash/: config.json
inputs/webgl_shader_demo/: config.json
outputs/: index.html
outputs/Meta/meta-llama-3.1-8b-instruct/demo_site_for_3d_printer/: calibration.html  filament.html  filament_change_process.html  index.html  log.html  stats.json  styles.css  test.json  troubleshooting.html
outputs/Meta/meta-llama-3.1-8b-instruct/demo_site_for_plumbing/: index.html  log.html  stats.json  test.json
outputs/Meta/meta-llama-3.1-8b-instruct/game_3d_cart_racing/: config.json  log.html  stats.json  test.json
scaffold/: pyproject.toml
scaffold/src/scaffold/: __main__.py  config.py  log_to_html.py  test.py
simple-agent/: Cargo.toml
simple-agent/src/: agent.rs  datatypes.rs  default_tools.rs  llm_client.rs  main.rs  tool_manager.rs
simple-agent/src/llm_api/: client.rs  types.rs
site/: index.html  package-lock.json  package.json
site/public/test_results/: index.html  summary.json
site/src/: App.tsx  MessageView.tsx  RunSummary.tsx  SummaryList.tsx  Tags.tsx  TestContainer.tsx  index.css  llm_models.tsx  models.ts  run_card.tsx  summary_list.tsx  test_container.tsx  useResource.tsx
(+826 files in other folders)
