[project]
name = "ai-agent-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.7.1",
    "pydantic>=2.11.4",
    "ruff>=0.11.8",
    "structlog>=25.3.0",
]


[tool.pyright]
typeCheckingMode = "strict"
