[project]
name = "ai-agent-evaluator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
   "pyright>=1.1.400",
   "tqdm>=4,<5",
   "agent",
   "scaffold",
]

[tool.uv.sources]
agent = { workspace = true }
scaffold = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]


[tool.pyright]
typeCheckingMode = "strict"
