[package]
name = "simple-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"

hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
pretty_env_logger = "0.5.0"
bytes = "1.10.1"
serde = { version="1.0.219", features=["derive"] }
