[package]
name = "simple-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
serde = { version="1.0.219", features=["derive"] }
reqwest = { version="0.12.15", default-features = false, features=["json", "rustls-tls"] }
chrono = { version="0.4.41", features=["serde"] }
log = {version="0.4.27", features=["kv"] }
structured-logger = "1.0.4"
