[package]
name = "scaffold"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
serde = { version="1.0.219", features=["derive"] }
log = {version="0.4.27", features=["kv"] }
structured-logger = "1.0.4"
structopt = "0.3.26"

agent-types = { path = "../agent-types" }
fs_extra = "1.3.0"
